feat: qr validation
